# ProofLens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmark_schema_v1.json  benchmark_schema_v1.md
examples/: sample_paper.tex
examples/sample_project/: Sample.lean  lakefile.lean
src/lean_agent/: __init__.py  __main__.py  ast_declaration_extractor.py  audit.py  benchmark.py  cli.py  explainer.py  formal_type.py  lake_project.py  lean_parser.py  models.py  paper_checker.py  project.py  proof_state_extractor.py  semantic_extractor.py
src/prooflens/: __init__.py
tests/: test_ast_declaration_extractor.py  test_benchmark.py  test_cli.py  test_declaration_index.py  test_lean_parser.py  test_paper_checker.py  test_proof_state_extractor.py  test_semantic_extractor.py
