[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prooflens"
version = "0.1.0"
description = "Prooflens is a Lean-aware research assistant for formalization projects, papers, and AI4Math benchmarks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Prooflens contributors" }
]
license = { text = "MIT" }
keywords = ["lean", "formalization", "ai4math", "benchmark", "latex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []

[project.scripts]
prooflens = "lean_agent.cli:main"
lean-agent = "lean_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
